--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -169,13 +169,13 @@
                             },
                             fields: [
                                 { name: "id", type: "text", width: 50, title: "RunCard", css: "center-align" },
-                                { name: "CreationTime", type: "text", width: 50, title: "RunCard", css: "center-align" },
                                 { name: "OptionName", type: "text", width: 50, title: "OptionName", css: "center-align" },
                                 { name: "Upper_InspectionValue", type: "text", width: 50, title: "Upper", css: "center-align" },
                                 { name: "InspectionValue", type: "text", width: 50, title: "Value", css: "center-align" },
                                 { name: "Lower_InspectionValue", type: "text", width: 50, title: "Lower", css: "center-align" },
                                 { name: "InspectionStatus", type: "text", width: 50, title: "Status", css: "center-align" },
-                                { name: "Name", type: "text", width: 50, title: "Name", css: "center-align" }
+                                { name: "Name", type: "text", width: 50, title: "Name", css: "center-align" },
+                                { name: "CreationTime", type: "text", width: 50, title: "InspectedTime", css: "center-align" }
 
                             ]
                         })
